# path_follower

./: .gitignore  README.md
include/: ImageProcessor.h  PathFollowerController.h  config.hpp
simulation/: pionner_yellow_path.ttt
source/: CMakeLists.txt  ImageProcessor.cpp  PathFollowerController.cpp  main.cpp
